Fixed details marker showing on Firefox

--- a/src/assets/stylesheets/extensions/pymdown/_details.scss
+++ b/src/assets/stylesheets/extensions/pymdown/_details.scss
@@ -70,6 +70,7 @@
   summary {
     @extend .admonition-title;
 
+    display: block;
     min-height: px2rem(20px);
     padding: px2rem(8px) px2rem(36px) px2rem(8px) px2rem(40px);
     border-top-right-radius: px2rem(2px);
